feat: split Order into DeliverOrder, TakeoutOrder and EatInOrder